# MLOps-Proyecto-fase-3-equipo-29

./: .gitignore  Makefile  README.md  X_train_processed.csv  dvc.yaml  mlflow_smoke.py  pyproject.toml
data/processed/: .gitignore  Xtraintest.csv.dvc  data_clean.csv  data_clean.csv.dvc  ytraintest.csv.dvc
docker/: README.md
docs/: README.md  comandos_make.md  configuracion.md  dvc_configuracion.md  dvc_pipeline.md  mlflow_guia.md  modelos_disponibles.md  pipeline_ejemplos.md  roadmap.md  scripts_detallados.md  testing.md  uv_guia.md
mlops_project/: config.py  dataset.py  plots.py
mlops_project/modeling/: train.py
models/: .gitignore  best_model.joblib  best_model.joblib.dvc  drift_results.json  model_results.json  preprocessor.joblib  preprocessor.joblib.dvc
reports/: evidently_drift_report.html  evidently_drift_results.json
scripts/: check_drift.py  data_drift_evaluation.py  plot_differences.py  simulate_data_drift.py
tests/: conftest.py  test_config.py  test_dataset.py  test_dataset_io.py  test_features.py  test_integration.py  test_modeling.py  test_modeling_improved.py  test_plots.py
web_service/: README.md  __main__.py  app.py  models.py  service.py
web_service/postman/: postman_schema_validation.json
